--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "glhd-tailwindcss-transitions": "^0.3.0",
+    "lodash": "^4.17.11",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-waterfall": "^1.0.6"
