--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.17.11",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
-    "vue-waterfall": "^1.0.6"
+    "vue-waterfall": "^1.0.6",
+    "vuedraggable": "^2.20.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.9",
