--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-waterfall": "^1.0.6",
-    "vuedraggable": "^2.20.0"
+    "vuedraggable": "^2.20.0",
+    "vuetable-2": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.9",
