--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "algoliasearch": "^3.32.1",
     "axios": "^0.18.0",
+    "es6-promise": "^4.2.6",
     "glhd-tailwindcss-transitions": "^0.3.0",
+    "instantsearch.css": "^7.2.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.16",
+    "vue-instantsearch": "^2.0.1",
     "vue-router": "^3.0.1",
     "vue-waterfall": "^1.0.6",
     "vuedraggable": "^2.20.0",
-    "vuetable-2": "^2.0.0-beta.4"
+    "vuetable-2": "^2.0.0-beta.4",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.9",
