--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
     "glhd-tailwindcss-transitions": "^0.3.0",
     "instantsearch.css": "^7.2.0",
     "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "tiptap": "^1.16.2",
+    "tiptap-extensions": "^1.16.2",
     "vue": "^2.5.16",
     "vue-instantsearch": "^2.0.1",
     "vue-router": "^3.0.1",
